--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#6495ED</color>
+    <color name="colorPrimaryDark">#5077bd</color>
+    <color name="colorPrimaryLight">#83aaf0</color>
+    <color name="colorAccent">#95ED64</color>
+    <color name="transparent">#00000000</color>
+    <color name="selected">#73c0ee</color>
+    <color name="unselected">#00000000</color>
 </resources>
