--- a/Pr0Ca1app/src/main/res/layout/app_bar_main.xml
+++ b/Pr0Ca1app/src/main/res/layout/app_bar_main.xml
@@ -7,6 +7,7 @@
     tools:context="io.github.drewhans555.pr0ca1.MainActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
