--- a/Pr0Ca1app/src/main/res/values/colors.xml
+++ b/Pr0Ca1app/src/main/res/values/colors.xml
@@ -4,6 +4,39 @@
     <color name="colorPrimaryDark">#5077bd</color>
     <color name="colorPrimaryLight">#83aaf0</color>
     <color name="colorAccent">#95ED64</color>
+    <color name="colorBackgroundAcButton">#304047</color>
+    <color name="colorBackgroundAcButtonPressed">#0D304047</color>
+    <color name="colorBackgroundAddButton">#5A95F5</color>
+    <color name="colorBackgroundAddButtonPressed">#0D5A95F5</color>
+    <color name="colorBackgroundAndButton">#0D5BDD</color>
+    <color name="colorBackgroundAndButtonPressed">#0D0D5BDD</color>
+    <color name="colorBackgroundDeleteButton">#263238</color>
+    <color name="colorBackgroundDeleteButtonPressed">#0D263238</color>
+    <color name="colorBackgroundDivideButton">#1266F1</color>
+    <color name="colorBackgroundDivideButtonPressed">#0D1266F1</color>
+    <color name="colorBackgroundEqualButton">#304047</color>
+    <color name="colorBackgroundEqualButtonPressed">#0D304047</color>
+    <color name="colorBackgroundModButton">#0D5BDD</color>
+    <color name="colorBackgroundModButtonPressed">#0D0D5BDD</color>
+    <color name="colorBackgroundMultiplyButton">#2A75F3</color>
+    <color name="colorBackgroundMultiplyButtonPressed">#0D2A75F3</color>
+    <color name="colorBackgroundNandButton">#1266F1</color>
+    <color name="colorBackgroundNandButtonPressed">#0D1266F1</color>
+    <color name="colorBackgroundNorButton">#0D5BDD</color>
+    <color name="colorBackgroundNorButtonPressed">#0D0D5BDD</color>
+    <color name="colorBackgroundNotButton">#0C51C5</color>
+    <color name="colorBackgroundNotButtonPressed">#0D0C51C5</color>
+    <color name="colorBackgroundNumberButton">#263238</color>
+    <color name="colorBackgroundNumberButtonPressed">#0D263238</color>
+    <color name="colorBackgroundOrButton">#0C51C5</color>
+    <color name="colorBackgroundOrButtonPressed">#0D0C51C5</color>
+    <color name="colorBackgroundSubtractButton">#4285F4</color>
+    <color name="colorBackgroundSubtractButtonPressed">#0D4285F4</color>
+    <color name="colorBackgroundXnorButton">#0C51C5</color>
+    <color name="colorBackgroundXnorButtonPressed">#0D0C51C5</color>
+    <color name="colorBackgroundXorButton">#0A47AD</color>
+    <color name="colorBackgroundXorButtonPressed">#0D0A47AD</color>
+    <color name="colorTextButton">#FFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="selected">#73c0ee</color>
     <color name="unselected">#00000000</color>
