--- a/Pr0Ca1app/src/main/res/drawable/side_nav_bar.xml
+++ b/Pr0Ca1app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#4B8EFF"
+        android:endColor="#5594FE"
+        android:startColor="#4181EC"
         android:type="linear" />
 </shape>
