--- a/Pr0Ca1app/src/main/res/menu/main.xml
+++ b/Pr0Ca1app/src/main/res/menu/main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--
+    Save this for when you want to add themes and other settings to Pr0Ca1
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    -->
 </menu>
